--- a/deepstream.html
+++ b/deepstream.html
@@ -24,7 +24,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('Deepstream RPC make',{
         category: 'function',
-        color:"#e8cfe8",
+        color:"#0FBBEC",
         defaults: {
             name: {value:""},
             server: {
@@ -76,7 +76,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('Deepstream RPC provide',{
         category: 'input',
-        color:"#e8cfe8",
+        color:"#0FBBEC",
         defaults: {
             name: {value:""},
             server: {type:"deepstream-server",required:true},
@@ -117,7 +117,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('Deepstream RPC response',{
         category: 'output',
-        color:"#e8cfe8",
+        color:"#0FBBEC",
         defaults: {
             name: {value:""}
         },
@@ -157,7 +157,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('Deepstream Event emit',{
         category: 'output',
-        color:"#e8cfe8",
+        color:"#0FBBEC",
         defaults: {
             name: {value:""},
             server: {
@@ -207,7 +207,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('Deepstream Event subscribe',{
         category: 'input',
-        color:"#e8cfe8",
+        color:"#0FBBEC",
         defaults: {
             name: {value:""},
             server: {type:"deepstream-server",required:true},
@@ -253,7 +253,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('Deepstream Record update',{
         category: 'output',
-        color:"#e8cfe8",
+        color:"#0FBBEC",
         defaults: {
             name: {value:""},
             server: {
@@ -305,7 +305,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('Deepstream Record subscribe',{
         category: 'input',
-        color:"#e8cfe8",
+        color:"#0FBBEC",
         defaults: {
             name: {value:""},
             server: {type:"deepstream-server",required:true},
