--- a/deepstream.html
+++ b/deepstream.html
@@ -40,7 +40,7 @@
         outputs:1,
         icon: "bridge.png",
         label: function() {
-            return this.name||"Deepstream RPC Make";
+            return this.name || "Deepstream RPC Make";
         },
         labelStyle: function() {
             return (this.name)?"node_label_italic":"";
@@ -86,7 +86,7 @@
         outputs:1,
         icon: "bridge.png",
         label: function() {
-            return this.name||"Deepstream RPC Provide";
+            return this.name||"Deepstream RPC";
         },
         labelStyle: function() {
             return (this.name)?"node_label_italic":"";
@@ -117,7 +117,7 @@
         outputs:0,
         icon: "bridge.png",
         label: function() {
-            return this.name||"Deepstream Response";
+            return this.name||"Deepstream RPC";
         },
         labelStyle: function() {
             return (this.name)?"node_label_italic":"";
@@ -165,7 +165,7 @@
         outputs:0,
         icon: "bridge.png",
         label: function() {
-            return this.name||"Deepstream Event Emit";
+            return this.name||"Deepstream Event";
         },
         labelStyle: function() {
             return (this.name)?"node_label_italic":"";
@@ -209,7 +209,7 @@
         outputs:1,
         icon: "bridge.png",
         label: function() {
-            return this.name||"Deepstream Event Subscribe";
+            return this.name||"Deepstream Event";
         },
         labelStyle: function() {
             return (this.name)?"node_label_italic":"";
@@ -259,7 +259,7 @@
         outputs:0,
         icon: "bridge.png",
         label: function() {
-            return this.name||"Deepstream Record Update";
+            return this.name||"Deepstream Record";
         },
         labelStyle: function() {
             return (this.name)?"node_label_italic":"";
@@ -308,7 +308,7 @@
         outputs:1,
         icon: "bridge.png",
         label: function() {
-            return this.name||"Deepstream Record Subscribe";
+            return this.name||"Deepstream Record";
         },
         labelStyle: function() {
             return (this.name)?"node_label_italic":"";
