--- a/deepstream.html
+++ b/deepstream.html
@@ -38,7 +38,7 @@
         },
         inputs:1,
         outputs:1,
-        icon: "bridge.png",
+        icon: "deepstream.svg",
         label: function() {
             return this.name || "Deepstream RPC Make";
         },
@@ -84,7 +84,7 @@
         },
         inputs:0,
         outputs:1,
-        icon: "bridge.png",
+        icon: "deepstream.svg",
         label: function() {
             return this.name||"Deepstream RPC";
         },
@@ -115,7 +115,8 @@
         },
         inputs:1,
         outputs:0,
-        icon: "bridge.png",
+		align: 'right',
+        icon: "deepstream.svg",
         label: function() {
             return this.name||"Deepstream RPC";
         },
@@ -161,9 +162,10 @@
 				required:true
 			}
         },
+		align: 'right',
         inputs:1,
         outputs:0,
-        icon: "bridge.png",
+        icon: "deepstream.svg",
         label: function() {
             return this.name||"Deepstream Event";
         },
@@ -207,7 +209,7 @@
         },
         inputs:0,
         outputs:1,
-        icon: "bridge.png",
+        icon: "deepstream.svg",
         label: function() {
             return this.name||"Deepstream Event";
         },
@@ -257,7 +259,8 @@
         },
         inputs:1,
         outputs:0,
-        icon: "bridge.png",
+        icon: "deepstream.svg",
+		align: 'right',
         label: function() {
             return this.name||"Deepstream Record";
         },
@@ -306,7 +309,7 @@
         },
         inputs:0,
         outputs:1,
-        icon: "bridge.png",
+        icon: "deepstream.svg",
         label: function() {
             return this.name||"Deepstream Record";
         },
