+ handle RPC response error (in msg.err)

--- a/deepstream.html
+++ b/deepstream.html
@@ -104,6 +104,7 @@
 
 <script type="text/x-red" data-help-name="Deepstream RPC response">
 	<p> Send response to deepstream </p>
+	<p> If msg.err is not empty, it sends an error response with the content of msg.err. Otherwise it will send the msg.payload as data.
 </script>
 
 <script type="text/javascript">
