--- a/deepstream.html
+++ b/deepstream.html
@@ -241,8 +241,10 @@
 </script>
 
 <script type="text/x-red" data-help-name="Deepstream Record update">
-    <p>Connects to a server using the deepstream protocol to emit an event with or without params.</p>
-	<p>The function parameters will be stored in the <code>msg.payload</code></p>   
+    <p>Connects to a server using the deepstream protocol update a Record</p>
+	<p>If the <code>msg.record</code> is defined it's updated, otherwise it retrieve the <code>recordPath</code></p>  
+	<br/>
+	<p>If the <code>path</code> value is defined it updated the specified path of the record,  otherwise it replace all data</p>   
 </script>
 
 <script type="text/javascript">
@@ -255,7 +257,7 @@
 				type:"deepstream-server",
 				required:true
 			},
-			recordPath: {value:"",required:true},
+			recordPath: {value:""},
 			path: {value:""}
         },
         inputs:1,
@@ -295,10 +297,11 @@
     <p>Connects to a server using the deepstream protocol to get a record and subscribe to the <code>Subscribe Path</code> if one is defined.</p>
 	<p>The parameter <code>Record path</code> will define the record to get.</p>
 	<br>
-	<p> On subscription we retrieve the record, the msg will contain the following data : <p>
+	<p> On subscription we retrieve the record, the msg will contain the following data : </p>
 	<p>	<code>msg.record</code> : the record record</p>
 	<p> <code>msg.topic</code> : 'record'</p>
 	<p> <code>msg.payload</code>: null</p>
+	<br/>
 	<p> Then on each update we will send the the following message : </p>
 	<p>	<code>msg.record</code> : the record record</p>
 	<p> <code>msg.topic</code> : 'update'</p>
@@ -347,7 +350,7 @@
     <p>Connects to a server using the deepstream protocol to get a record</p>
 	<p>The parameter <code>Record path</code> will define the record to get.</p>
 	<br>
-	<p> The msg will contain the following data : <p>
+	<p> The msg will contain the following data : </p>
 	<p>	<code>msg.record</code> : the record record</p>
 	<p> <code>msg.topic</code> : 'record'</p>
 	<p> <code>msg.payload</code>: null</p>
