--- a/deepstream.html
+++ b/deepstream.html
@@ -300,7 +300,7 @@
 	<p> On subscription we retrieve the record, the msg will contain the following data : </p>
 	<p>	<code>msg.record</code> : the record record</p>
 	<p> <code>msg.topic</code> : 'record'</p>
-	<p> <code>msg.payload</code>: null</p>
+	<p> <code>msg.payload</code>: the record data</p>
 	<br/>
 	<p> Then on each update we will send the the following message : </p>
 	<p>	<code>msg.record</code> : the record record</p>
@@ -353,7 +353,7 @@
 	<p> The msg will contain the following data : </p>
 	<p>	<code>msg.record</code> : the record record</p>
 	<p> <code>msg.topic</code> : 'record'</p>
-	<p> <code>msg.payload</code>: null</p>
+	<p> <code>msg.payload</code>: the record data</p>
 </script>
 
 <script type="text/javascript">
