--- a/deepstream.html
+++ b/deepstream.html
@@ -382,8 +382,16 @@
         <input type="text" id="node-config-input-port" placeholder="Port" style="width:45px">		
     </div>
 	<div class="form-row">
-        <label for="node-config-input-timeout"> Timeout</label>
-        <input type="text" id="node-config-input-timeout" placeholder="Timeout">
+        <label for="node-config-input-subscriptionTimeout"> Subscription Timeout</label>
+        <input type="text" id="node-config-input-subscriptionTimeout" placeholder="Timeout">
+    </div>
+	<div class="form-row">
+        <label for="node-config-input-rpcAckTimeout"> RPC Ack Timeout</label>
+        <input type="text" id="node-config-input-rpcAckTimeout" placeholder="Timeout">
+    </div>
+	<div class="form-row">
+        <label for="node-config-input-rpcResponseTimeout"> RPC Response Timeout</label>
+        <input type="text" id="node-config-input-rpcResponseTimeout" placeholder="Timeout">
     </div>
     <div class="form-row">
         <label for="node-config-input-user"><i class="fa fa-user"></i>Username</label>
